
2004-12-02: - If keyword files contained empty lines, PHOEBE messed up the
              readout, including if the empty line was at the end of file,
              because it somehow managed to overwrite strings. Now the
              string length checkup is done to see whether parsing should
              even be attempted or not. In other words, empty lines are now
              legitimate.
2004-11-15: - Comparison against uninitialized strings in readout functions
              has been fixed. This didn't influence the way PHOEBE was run-
              ning, it's just tidier now.
            - Bugfix: if the user used binning on a file with time as inde-
              pendent variable but phase was selected (or if phases in a
              file weren't on the [-0.5, 0.5] interval, PHOEBE segfaulted.
              These values are now simply discarded.
            - Temperature range limits were too strict - lower limit has
              been reduced from 3500K to 500K and upper limit was increased
              from 50000K to 100000K.
2004-11-01: - PHOEBE has been precompiled and packaged under Debian stable
              (Woody). The deb package is at your disposal on PHOEBE's
              homepage. The debian/ top-level directory was added to the
              development source, but it won't be submitted to the CVS.
2004-10-29: - PHOEBE crashed when LC was plotted, but the filter wasn't de-
              fined (i.e. set LCNO to 1 and plot the LC as is). The assumed
              values for bandpass-dependent variables are now defaults.
2004-10-28: - If .lco file readout fails on lines giving radii, uninitialized
              values were used in LC Plotting window. Now these values are
              initialized to -1.0 (so that the problem is obvious). Due to
              this bug PHOEBE was reported to crash. Thanks to Ethem Derman
              for pointing this out!
2004-10-21: - Array sizes in WD have been changed to accomodate for Nmax=60